WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280337
[WPE][GTK] default currentTime is NaN
https://bugs.webkit.org/show_bug.cgi?id=280337
Summary
[WPE][GTK] default currentTime is NaN
Jean-Yves Avenard [:jya]
Reported
2024-09-25 09:31:24 PDT
When a MediaPlayerPrivateGStreamer, the initial currentTime will be NaN. This is a consequence of
193933@main
In `MediaTime MediaPlayerPrivateGStreamer::currentMediaTime() const` we have: ``` if (!m_pipeline || m_errorOccured) return MediaTime::invalidTime(); ``` m_pipeline may not be set until content has been fully retrieved. Per spec, on creation a media element has its currentTime attribute set to 0, not NaN. This causes assertion when you enable ManagedMediaSource which uses the currentTime value to determine what the readyState is going to be as we build TimeRanges containing currentTime
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2024-09-25 10:24:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34230
EWS
Comment 2
2024-09-26 16:14:22 PDT
Committed
284322@main
(32a477e91d09): <
https://commits.webkit.org/284322@main
> Reviewed commits have been landed. Closing PR #34230 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-09-26 16:15:21 PDT
<
rdar://problem/136787669
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug