Cherry-pick 284322@main (32a477e91d09). https://bugs.webkit.org/show_bug.cgi?id=280337

[WPE][GTK] default currentTime is NaN
    https://bugs.webkit.org/show_bug.cgi?id=280337

    Reviewed by Philippe Normand.

    Follow-up on 284149@main.
    Make currentTime initialized to MediaTime::zeroTime() and remove all path where invalidTime could be returned.

    * Source/WebCore/Modules/mediasource/ManagedMediaSource.cpp:
    (WebCore::ManagedMediaSource::monitorSourceBuffers): Remove workaround test that currentTime wasn't invalid.
    * Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
    (WebCore::MediaPlayerPrivateGStreamer::play):
    (WebCore::MediaPlayerPrivateGStreamer::currentTime const):
    (WebCore::MediaPlayerPrivateGStreamer::handleMessage):
    (WebCore::MediaPlayerPrivateGStreamer::performTaskAtTime):
    * Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:

    Canonical link: https://commits.webkit.org/284322@main

Canonical link: https://commits.webkit.org/282416.173@webkitglib/2.46