Source/WebCore/Modules/mediasource/ManagedMediaSource.cpp
@@ -112,9 +112,11 @@ void ManagedMediaSource::monitorSourceBuffers()
         setStreaming(true);
         return;
     }
-    auto currentTime = this->currentTime();
 
     ensurePrefsRead();
+
+    auto currentTime = this->currentTime();
+    ASSERT(currentTime.isValid());
 
     auto limitAhead = [&] (double upper) {
         MediaTime aheadTime = currentTime + MediaTime::createWithDouble(upper);
